--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "singleQuote": false
+  "semi": true,
+  "trailingComma": "all",
+  "singleQuote": false,
+  "printWidth": 80,
+  "tabWidth": 2
 }
