--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "source.fixAll.eslint": "explicit"
     // "source.organizeImports": "explicit"
   },
-  "files.trimTrailingWhitespace": true
+  "files.trimTrailingWhitespace": true,
+  "prettier.useEditorConfig": true
 }
